tests/fixtures/multi_module/invalid/long_cycle/b.furqan
// D9/D20 G2 fixture. Three-module cycle: A -> B -> C -> A.

bismillah B {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: b_side
    not_scope: nothing_excluded
}

tanzil b_deps {
    depends_on: C
}
